force-app/main/default/objects/aha_E2R_Record__c/aha_E2R_Record__c.object-meta.xml
<CustomObject>
    <description>E2R (Email to Record) — records created from inbound emails and enriched via an LLM Prompt Template. This is the generic template object; rename and extend fields for your use case.</description>
    <label>E2R Record</label>
    <nameField>
        <displayFormat>E2R-{000}</displayFormat>
        <label>E2R Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E2R Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>