force-app/main/default/objects/aha_E2R_Record__c/fields/aha_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>aha_Action_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True if the email indicates that an action must be taken.</inlineHelpText>
    <label>Action Required</label>
    <type>Checkbox</type>
</CustomField>