force-app/main/default/objects/aha_E2R_Record__c/fields/aha_Category__c.field-meta.xml
<CustomField>
    <fullName>aha_Category__c</fullName>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>