force-app/main/default/objects/aha_E2R_Record__c/fields/aha_Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>aha_Doc_Type__c</fullName>
    <label>Attachment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>