force-app/main/default/objects/aha_E2R_Record__c/fields/aha_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>aha_Email_Body__c</fullName>
    <inlineHelpText>This content was directly copied by the custom email handler: email.body</inlineHelpText>
    <label>Email Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>