force-app/main/default/objects/aha_E2R_Record__c/fields/aha_Email_From__c.field-meta.xml
<CustomField>
    <fullName>aha_Email_From__c</fullName>
    <label>Email From</label>
    <length>250</length>
    <type>Text</type>
</CustomField>