force-app/main/default/objects/aha_E2R_Record__c/fields/aha_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>aha_Email_Subject__c</fullName>
    <inlineHelpText>Control Field - Populated by Apex Custom Email Handler</inlineHelpText>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>