force-app/main/default/objects/aha_E2R_Record__c/fields/aha_Notes__c.field-meta.xml
<CustomField>
    <fullName>aha_Notes__c</fullName>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>