force-app/main/default/objects/aha_E2R_Record__c/fields/aha_Priority__c.field-meta.xml
<CustomField>
    <fullName>aha_Priority__c</fullName>
    <inlineHelpText>High, Medium, or Low — extracted by LLM from email content.</inlineHelpText>
    <label>Priority</label>
    <length>50</length>
    <type>Text</type>
</CustomField>