force-app/main/default/objects/aha_E2R_Record__c/fields/aha_Record_Date__c.field-meta.xml
<CustomField>
    <fullName>aha_Record_Date__c</fullName>
    <label>Record Date</label>
    <type>DateTime</type>
</CustomField>