force-app/main/default/objects/aha_E2R_Record__c/fields/aha_Record_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>aha_Record_Date_Text__c</fullName>
    <description>Stores the ISO-8601 string returned by the LLM before DATETIMEVALUE conversion. Using Text avoids deserialiser failures when the LLM returns a slightly non-standard format.</description>
    <label>Record Date (as Text)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>