force-app/main/default/objects/aha_E2R_Record__c/fields/aha_Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>aha_Sender_Name__c</fullName>
    <inlineHelpText>The name of the person who submitted or reported this record, as extracted by the LLM from the email content.</inlineHelpText>
    <label>Sender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>