force-app/main/default/objects/aha_E2R_Record__c/fields/aha_Sourced_from_Email__c.field-meta.xml
<CustomField>
    <fullName>aha_Sourced_from_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Control field - Indicates that this record originated in the Customer Email Handler Apex Class</inlineHelpText>
    <label>Sourced from Email</label>
    <type>Checkbox</type>
</CustomField>