force-app/main/default/objects/aha_E2R_Record__c/fields/aha_Summary__c.field-meta.xml
<CustomField>
    <fullName>aha_Summary__c</fullName>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>